# auto-trader-backend

./: pyproject.toml
app/application/service/: technical_indicators.py
app/domain/model/: fx.py
app/infrastructure/externalapi/: klines.py
examples/: api.py  kline_response_sample.py  technical_indicators.py
